[project]
name = "games-story"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.6",
    "pydantic-settings>=2.6.1",
    "ruff>=0.8.2",
    "sqlalchemy>=2.0.36",
]
